--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="dashboard-content">
                 <div class="dashboard-section">
                     <h2>Minhas Turmas</h2>
-                    <button onclick="showModal('createClassModal')" class="create-btn"><i class="fas fa-plus"></i> Criar Nova Turma</button>
+                    <button onclick="showCreateClassModal()" class="create-btn"><i class="fas fa-plus"></i> Criar Nova Turma</button>
                     <div id="classesList" class="classes-grid"></div>
                 </div>
                 <div class="dashboard-section">
@@ -131,118 +131,112 @@
     </div>
 
     <div id="startScreen" class="screen">
-		<div class="container">
-			<div class="game-title">
-				<h1>🌟 Jogo das Letras 🌟</h1>
-				<p>Vamos aprender o alfabeto juntos!</p>
-			</div>
-			<div class="character-mascot">
-				<div class="mascot bounce">
-					<i class="fas fa-cat"></i>
-				</div>
-				<div class="speech-bubble">
-					<p>Olá! Eu sou o Gatinho Alfabeto! Vamos brincar?</p>
-				</div>
-			</div>
-			<button id="startButton" class="start-button">
-				<i class="fas fa-play"></i> Começar Aventura
-			</button>
-		</div>
-	</div>
+ 		<div class="container">
+ 			<div class="game-title">
+ 				<h1>🌟 Jogo das Letras 🌟</h1>
+ 				<p>Vamos aprender o alfabeto juntos!</p>
+ 			</div>
+ 			<div class="character-mascot">
+ 				<div class="mascot bounce">
+ 					<i class="fas fa-cat"></i>
+ 				</div>
+ 				<div class="speech-bubble">
+ 					<p>Olá! Eu sou o Gatinho Alfabeto! Vamos brincar?</p>
+ 				</div>
+ 			</div>
+ 			<button id="startButton" class="start-button">
+ 				<i class="fas fa-play"></i> Começar Aventura
+ 			</button>
+ 		</div>
+ 	</div>
 
-    <div id="gameScreen" class="screen">
-		<div class="game-header">
-			<div class="phase-info">
-				<h2>Fase <span id="currentPhase">1</span></h2>
-				<div class="progress-bar">
-					<div id="progressFill" class="progress-fill"></div>
-				</div>
-			</div>
-			<div class="score-info">
-				<div class="score">
-					<i class="fas fa-star"></i>
-					<span id="score">0</span>/<span id="totalQuestions">0</span>
-				</div>
-				<div class="attempts">
-					<i class="fas fa-heart"></i>
-					<span id="attempts">2</span> tentativas
-				</div>
-			</div>
-		</div>
-		<div class="game-content">
-			<div class="question-area">
-				<div class="mascot-helper">
-					<div class="mascot pulse">
-						<i class="fas fa-cat"></i>
-					</div>
-					<div class="speech-bubble" id="helperText">
-						Clique no alto-falante para ouvir o som!
-					</div>
-				</div>
-				<div class="audio-section" id="audioQuestionArea">
-					<button id="playAudioButton" class="audio-button">
-						<i class="fas fa-volume-up"></i>
-						<span>Ouvir Som</span>
-					</button>
-				</div>
-                <div id="imageQuestionArea" style="display: none;">
-                    <div class="image-display">
-                        <span id="imageEmoji" class="image-emoji"></span>
-                    </div>
-                    <h3 id="wordDisplay" class="word-display"></h3>
-                </div>
-				<div class="question-text">
-					<h3 id="questionText">Qual letra faz este som?</h3>
-				</div>
-			</div>
-			<div class="letters-grid" id="lettersGrid"></div>
-			<div class="game-controls">
-				<button id="repeatAudio" class="control-button">
-					<i class="fas fa-redo"></i> Ouvir Novamente
-				</button>
-				<button id="nextQuestion" class="control-button" style="display: none;">
-					<i class="fas fa-arrow-right"></i> Próxima
-				</button>
-			</div>
-		</div>
-	</div>
+ 	<div id="gameScreen" class="screen">
+ 		<div class="game-header">
+ 			<div class="phase-info">
+ 				<h2>Fase <span id="currentPhase">1</span></h2>
+ 				<div class="progress-bar">
+ 					<div id="progressFill" class="progress-fill"></div>
+ 				</div>
+ 			</div>
+ 			<div class="score-info">
+ 				<div class="score">
+ 					<i class="fas fa-star"></i>
+ 					<span id="score">0</span>/<span id="totalQuestions">0</span>
+ 				</div>
+ 				<div class="attempts">
+ 					<i class="fas fa-heart"></i>
+ 					<span id="attempts">2</span> tentativas
+ 				</div>
+ 			</div>
+ 		</div>
+ 		<div class="game-content">
+ 			<div class="question-area">
+ 				<div class="mascot-helper">
+ 					<div class="mascot pulse">
+ 						<i class="fas fa-cat"></i>
+ 					</div>
+ 					<div class="speech-bubble" id="helperText">
+ 						Clique no alto-falante para ouvir o som!
+ 					</div>
+ 				</div>
+ 				<div class="audio-section">
+ 					<button id="playAudioButton" class="audio-button">
+ 						<i class="fas fa-volume-up"></i>
+ 						<span>Ouvir Som</span>
+ 					</button>
+ 				</div>
+ 				<div class="question-text">
+ 					<h3 id="questionText">Qual letra faz este som?</h3>
+ 				</div>
+ 			</div>
+ 			<div class="letters-grid" id="lettersGrid"></div>
+ 			<div class="game-controls">
+ 				<button id="repeatAudio" class="control-button">
+ 					<i class="fas fa-redo"></i> Ouvir Novamente
+ 				</button>
+ 				<button id="nextQuestion" class="control-button" style="display: none;">
+ 					<i class="fas fa-arrow-right"></i> Próxima
+ 				</button>
+ 			</div>
+ 		</div>
+ 	</div>
 
-    <div id="resultScreen" class="screen">
-		<div class="container">
-			<div class="result-content">
-				<div class="result-icon" id="resultIcon">
-					<i class="fas fa-trophy"></i>
-				</div>
-				<h2 id="resultTitle">Parabéns!</h2>
-				<div class="result-stats">
-					<div class="stat">
-						<i class="fas fa-star"></i>
-						<span>Acertos: <span id="finalScore">0</span></span>
-					</div>
-					<div class="stat">
-						<i class="fas fa-percentage"></i>
-						<span>Precisão: <span id="accuracy">0</span>%</span>
-					</div>
-				</div>
-				<div class="result-message" id="resultMessage">
-					Você conseguiu! Continue assim!
-				</div>
-				<div class="result-actions">
-					<button id="continueButton" class="result-button success" style="display: none;">
-						<i class="fas fa-arrow-right"></i> Próxima Fase
-					</button>
-					<button id="retryButton" class="result-button retry" style="display: none;">
-						<i class="fas fa-redo"></i> Tentar Novamente
-					</button>
-					<button id="restartButton" class="result-button">
-						<i class="fas fa-home"></i> Voltar ao Início
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
+ 	<div id="resultScreen" class="screen">
+ 		<div class="container">
+ 			<div class="result-content">
+ 				<div class="result-icon" id="resultIcon">
+ 					<i class="fas fa-trophy"></i>
+ 				</div>
+ 				<h2 id="resultTitle">Parabéns!</h2>
+ 				<div class="result-stats">
+ 					<div class="stat">
+ 						<i class="fas fa-star"></i>
+ 						<span>Acertos: <span id="finalScore">0</span></span>
+ 					</div>
+ 					<div class="stat">
+ 						<i class="fas fa-percentage"></i>
+ 						<span>Precisão: <span id="accuracy">0</span>%</span>
+ 					</div>
+ 				</div>
+ 				<div class="result-message" id="resultMessage">
+ 					Você conseguiu! Continue assim!
+ 				</div>
+ 				<div class="result-actions">
+ 					<button id="continueButton" class="result-button success" style="display: none;">
+ 						<i class="fas fa-arrow-right"></i> Próxima Fase
+ 					</button>
+ 					<button id="retryButton" class="result-button retry" style="display: none;">
+ 						<i class="fas fa-redo"></i> Tentar Novamente
+ 					</button>
+ 					<button id="restartButton" class="result-button">
+ 						<i class="fas fa-home"></i> Voltar ao Início
+ 					</button>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
 
-    <div id="globalFeedback">
+    <div id="globalFeedback" class="feedback">
         <div class="feedback-content">
             <span class="feedback-icon"></span>
             <span class="feedback-text"></span>
@@ -269,8 +263,8 @@
         <div class="modal-content large">
             <h3 id="manageClassTitle">Gerenciar Turma</h3>
             <div class="modal-tabs">
-                <button class="tab-btn active" onclick="showTab('studentsTab', this)">Alunos</button>
-                <button class="tab-btn" onclick="showTab('studentProgressTab', this)">Progresso</button>
+                <button class="tab-btn active" onclick="showTab('students', this)">Alunos</button>
+                <button class="tab-btn" onclick="showTab('studentProgress', this)">Progresso dos Alunos</button>
             </div>
             <div id="studentsTab" class="tab-content active">
                 <div class="students-section">
@@ -282,16 +276,13 @@
                         <form id="createStudentFormElement">
                             <div class="form-row">
                                 <div class="form-group">
-                                    <label for="createStudentUsername">Nome do Aluno (usuário):</label>
-                                    <input type="text" id="createStudentUsername" required>
+                                    <label for="createStudentUsername">Usuário:</label>
+                                    <input type="text" id="createStudentUsername" required autocomplete="username">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group password-group">
                                     <label for="createStudentPassword">Senha:</label>
-                                    <div class="password-input-group">
-                                        <input type="password" id="createStudentPassword" required autocomplete="new-password">
-                                        <button type="button" id="generatePasswordBtn" class="password-tool-btn" title="Gerar senha automática">🪄</button>
-                                        <button type="button" id="togglePasswordBtn" class="password-tool-btn" title="Mostrar/ocultar senha">👁️</button>
-                                    </div>
+                                    <input type="password" id="createStudentPassword" required autocomplete="new-password">
+                                    <button type="button" id="generatePasswordBtn" class="generate-password-btn" title="Gerar senha automática">🪄</button>
                                 </div>
                             </div>
                             <div class="form-actions">
@@ -304,8 +295,10 @@
                 </div>
             </div>
             <div id="studentProgressTab" class="tab-content">
-                <h4>Relatório de Progresso da Turma</h4>
-                <div id="studentProgressList" class="students-list"></div>
+                <div class="progress-section">
+                    <h4>Relatório de Progresso da Turma</h4>
+                    <div id="studentProgressList" class="students-list"></div>
+                </div>
             </div>
             <div class="modal-actions">
                 <button type="button" onclick="closeModal('manageClassModal')" class="modal-btn">Fechar</button>
@@ -322,7 +315,7 @@
             </div>
             <div id="uploadFileTab" class="tab-content active">
                 <div class="upload-section">
-                    <p>Envie os arquivos de áudio (.mp3, .wav) para cada letra.</p>
+                    <p>Envie os arquivos de áudio (.mp3, .wav, .m4a) para cada letra.</p>
                     <div class="upload-instructions">
                         <p><i class="fas fa-info-circle"></i> <strong>Nomeie os arquivos exatamente como a letra.</strong> Ex: <code>A.mp3</code></p>
                     </div>
@@ -338,7 +331,7 @@
                 <div class="record-section">
                     <p>Grave sua voz falando o som de cada letra.</p>
                     <div class="form-group">
-                        <label for="letterSelect">1. Escolha a Letra:</label>
+                        <label for="letterSelect">1. Escolha a Letra para Gravar:</label>
                         <select id="letterSelect"></select>
                     </div>
                     <div class="record-controls">
@@ -351,7 +344,7 @@
                         <audio id="audioPlayback" controls></audio>
                     </div>
                     <div id="recordStatus"></div>
-                    <button id="saveRecordingBtn" class="modal-btn primary" disabled><i class="fas fa-save"></i> Salvar</button>
+                    <button id="saveRecordingBtn" class="modal-btn primary" disabled><i class="fas fa-save"></i> Salvar Gravação</button>
                 </div>
             </div>
             <div class="modal-actions">
@@ -362,36 +355,14 @@
     
     <div id="tutorialOverlay" class="tutorial-overlay">
         <div class="tutorial-content">
-            <div id="tutorialMascot" class="mascot"><i class="fas fa-cat"></i></div>
-            <div class="speech-bubble" id="tutorialText"></div>
+            <div id="tutorialMascot" class="mascot">
+                <i class="fas fa-cat"></i>
+            </div>
+            <div class="speech-bubble" id="tutorialText">
+            </div>
             <button id="closeTutorialBtn" class="start-button">
                 <i class="fas fa-play"></i> Vamos Jogar!
             </button>
-        </div>
-    </div>
-
-    <div id="studentCreatedModal" class="modal">
-        <div class="modal-content">
-            <h3><i class="fas fa-check-circle" style="color: #4ECDC4;"></i> Aluno Criado!</h3>
-            <p>Anote ou copie os dados de login para entregar ao aluno.</p>
-            <div class="credentials-display">
-                <div class="credential-item">
-                    <span>Usuário:</span>
-                    <strong id="confirmStudentUsername"></strong>
-                </div>
-                <div class="credential-item">
-                    <span>Senha:</span>
-                    <strong id="confirmStudentPassword"></strong>
-                </div>
-            </div>
-            <div class="modal-actions">
-                <button type="button" id="copyCredentialsBtn" class="modal-btn">
-                    <i class="fas fa-copy"></i> Copiar Dados
-                </button>
-                <button type="button" onclick="closeModal('studentCreatedModal')" class="modal-btn primary">
-                    Fechar
-                </button>
-            </div>
         </div>
     </div>
 
